# bush

./: flatpaks.md  package-lock.json  todos
bluez/: README.md
bluez/lang-with-documentation/: Cargo.toml
bluez/lang-with-documentation/src/: bluez.rs  dbus.rs
bluez/lang-with-documentation/src/dapi/: root.rs
ccrust/: pointer.c
ccrust/cs_170/: rsg.patch  rss-news-01.patch  rss-news-02.patch  rss-news-03.patch  six-degrees-01.patch  six-degrees-02.patch  six-degrees-03.patch  six-degrees-04.patch  vector-hashset-01.patch  vector-hashset-02.patch
ccrust/cs_170/handouts/: 10.c  14.c  18.c
ccrust/integration/: build.sh  integration.c  vm.h
ccrust/waht/: adder.c  build.sh  gym.h  gym_config.h  gym_image.h  gym_render.h  imigo.h  nero  nero.h  notes.typ
ccrust/waht/demos/: adder.c  upscaling.c  vis.c
ccrust/waht/examples/: build.sh  double.c  gates.c  nero_xor.c  xor.c
crust/: Cargo.toml  build.rs
crust/src/: atomics.rs  cell.rs  channel.rs  drop_check.rs  fattos.rs  funs.rs  iter.rs  later.rs  lego.rs  main.rs  soda.rs  strtok.rs
gk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
gk/02/: README.md  tsconfig.json
gk/02/21-line/: index.html  main.ts
gk/02/22-circle/: index.html  main.ts
gk/02/23-ellipsis/: index.html  main.ts
gk/02/24-polygon-fill/: index.html  main.ts
gk/02/25-flood-fill/: index.html  main.ts
gk/02/26-floating-horizon/: index.html  main.ts
gk/02/bezier/: index.html  main.ts
gk/02/cyclic-curve/: index.html  main.ts
gk/03/31-clipping/: index.html  main.ts
gk/03/32-polygon-clip/: index.html  main.ts
gk/05/51-parallel-projection/: index.html  main.ts
gk/05/52-perspective-projection/: index.html  main.ts
gk/05/cube/: index.html  main.ts
gk/05/frustum/: index.html  main.ts
gk/05/rt/: index.html  main.ts
gk/06/b-spline/: index.html  main.ts
gk/lib/: bezier.ts  canvas.ts  circle.ts  color.ts  cyclic.ts  def.d.ts  img.ts  line.ts  mod.ts  point.ts  polygon.ts  types.ts  utils.ts
gk/lib/2d/: bezier.ts  line.ts  (+7 more)
kubs/clickhouse-grafana/: docker-compose.yml
kubs/kafka/: README.md  kafkar.yaml  kafkaz.yaml  shared.yaml
kubs/otel/: .gitignore  README.md  alloy.yaml  docker-compose.yml  signoz.yaml
kubs/ottel-spaniel/: .gitignore  Cargo.toml
kubs/ottel-spaniel/spanerator/: deno.json  gen.ts  main.ts  tree.ts
kubs/ottel-spaniel/src/: builder.rs  convert.rs  lib.rs  main.rs  misc.rs  schema.rs  write.rs
kubs/ottel-spaniel/src/arrow/: build.rs  ext.rs  mod.rs  read.rs  schema.rs  write.rs
kubs/ottel-spaniel/src/vortex/: build.rs  mod.rs  read.rs  write.rs
kubs/postgresql-cdc/: .env  .gitignore  README.md  docker-compose.yml  pg_hba.conf
kubs/postgresql-cdc/less-time-wasted/: Cargo.toml
kubs/postgresql-cdc/less-time-wasted/src/: main.rs
kubs/protobuf/: .gitignore  mek
kubs/tss/: args.ts  assert.ts  cli.ts  deno.json  global.d.ts  log.ts  misc.ts  pgpass_cmp.ts  random.ts
kubs/varnish/: .gitignore  README.md  default.vcl  docker-compose.yml
kubs/varnish/http-server/: Cargo.toml  Containerfile  Rocket.toml  query.sql
kubs/varnish/http-server/src/: db.rs  lib.rs  otel.rs
kubs/varnish/http-server/src/db/: 00.get_version.sql  01.get_generation.sql  02.get_type_base.sql  03.get_type.sql  04.get_ability.sql  05.get_item_pocket.sql  06.get_item_fling.sql  07.get_item_category.sql  08.get_item.sql  09.get_move_target.sql  10.get_move_damage_class.sql  11.get_move_effect.sql  12.get_contest_type.sql  13.get_contest_effect.sql  14.get_super_contest_effect.sql  15.get_move_meta.sql  16.get_move.sql  17.get_egg_group.sql  18.get_pokemon_move.sql  19.get_pokemon_move_meta.sql  20.get_pokemon.sql
opengl/: .gitignore  Cargo.toml
opengl/gluty/: Cargo.toml
opengl/gluty/assets/: figure.frag  teapot.vert  text_aspect.frag  text_aspect.vert  texture.frag  uniform.vert
opengl/gluty/examples/: create.rs  figure.rs  teapot.rs  text_aspect.rs  texture.rs  uniform.rs
opengl/gluty/examples/shaders/: figure.frag  figure.vert  teapot.frag  texture.vert  uniform.frag
opengl/gluty/macros/: Cargo.toml
opengl/gluty/macros/src/: lib.rs
opengl/gluty/src/: asset.rs  attributes.rs  buffer.rs  camera.rs  lib.rs  mesh.rs  obj.rs  program.rs  texture.rs  utils.rs
opengl/gluty/src/camera/: fly.rs  projection.rs
opengl/ig/: Cargo.toml
webgpu/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
webgpu/01-shader/: index.html  main.js  shader.wgsl
webgpu/02-uniform/: index.html  main.js  shader.wgsl
webgpu/03-grid-pattern/: fragment-shader.wgsl  index.html  main.js
webgpu/04-grid-pattern-painting/: index.html  main.js
webgpu/05-game-of-life/: bind-group.js  compute.js  fragment-shader.wgsl  game.js  gpu-buffer.js  grid.js  index.html  main.js  queue.js  render.js  shaders.js  utils.js
webgpu/06-game-of-life-input/: compute-shader.wgsl  fragment-shader.wgsl  index.html  lib.ts  main.ts  tsconfig.json  vertex-shader.wgsl
webgpu/07-cube/: index.html  main.ts  model.ts  projection.ts
webgpu/gol-rs/: Cargo.toml
webgpu/gol-rs/src/: fragment.wgsl  grid.rs  main.rs  wgpu_utils.rs
webgpu/utils/: module.ts  shaders.ts  utils.ts
(+100 files in other folders)
