[package]
name = "crust"
version = "0.1.0"
edition = "2021"
# Should be in another crate *-sys.
# https://doc.rust-lang.org/cargo/reference/build-scripts.html#-sys-packages
links = "sodium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
smol = { version = "1.3.0", optional = true }

[build-dependencies]
bindgen = { version = "0.63.0", optional = true }
pkg-config = { version = "0.3.26", optional = true }

[features]
bindgen = ["dep:bindgen", "dep:pkg-config"]
failures = []
future = ["dep:smol"]
