[package]
name = "gol-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26" }
winit = { version = "0.27.5" }
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }
smol = { version = "1.2.5" }
