[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled", "json"] }
rocket = "0.5"

tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.29"}

opentelemetry = { version = "0.28", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["metrics", "trace", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["metrics", "logs", "trace", "http-proto", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.28" }
opentelemetry-http = { version = "0.28", features = ["reqwest"] }
opentelemetry-appender-tracing = { version = "0.28" }

reqwest = "0.12"
